compiler/fabc_vm/src/translator/implementations/snapshots/fabc_vm__translator__implementations__expr__tests__translates_binary_expression.snap
---
source: compiler/fabc_vm/src/translator/implementations/expr.rs
expression: instructions
---
[
    EnterFrame(
        0,
    ),
    LoadConstant(
        Number(
            1,
        ),
    ),
    LoadConstant(
        Number(
            2,
        ),
    ),
    LoadConstant(
        Number(
            3,
        ),
    ),
    Mul,
    Add,
    LoadConstant(
        Number(
            4,
        ),
    ),
    LoadConstant(
        Number(
            5,
        ),
    ),
    Div,
    Sub,
    LoadConstant(
        Number(
            6,
        ),
    ),
    Eq,
    LoadConstant(
        Number(
            7,
        ),
    ),
    LoadConstant(
        Number(
            8,
        ),
    ),
    Le,
    LoadConstant(
        Number(
            9,
        ),
    ),
    Gr,
    LoadConstant(
        Number(
            10,
        ),
    ),
    Leq,
    LoadConstant(
        Number(
            11,
        ),
    ),
    Geq,
    Neq,
    LoadConstant(
        Boolean(
            true,
        ),
    ),
    And,
    LoadConstant(
        Boolean(
            false,
        ),
    ),
    Or,
    ExitFrame,
]
