compiler/fabc_vm/src/translator/implementations/snapshots/fabc_vm__translator__implementations__expr__tests__translates_identifier.snap
---
source: compiler/fabc_vm/src/translator/implementations/expr.rs
expression: instructions
---
[
    EnterFrame(
        0,
    ),
    LoadGlobal(
        0,
    ),
    ExitFrame,
]
