compiler/fabc_vm/src/translator/implementations/snapshots/fabc_vm__translator__implementations__expr__tests__translates_number_literal.snap
---
source: compiler/fabc_vm/src/translator/implementations/expr.rs
expression: instructions
---
[
    EnterFrame(
        0,
    ),
    LoadConstant(
        Number(
            42,
        ),
    ),
    ExitFrame,
]
